--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,14 @@
 {lib_dirs, ["src/"]}.
+{port_specs, [
+        {"priv/inf_reference.so", ["c_src/inf_reference.c"]}
+    ]}.
+{erlydtl_options, [
+        {compiler_options, [debug_info, debug_compiler]}
+    ]}.
 {deps, [
-    {'cowboy', ".*", {git, "https://github.com/extend/cowboy.git", {branch, master}}}
+    {'ranch', ".*", {git, "https://github.com/extend/ranch.git", {tag, "0.8.4"}}},
+    {'cowboy', ".*", {git, "https://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
+    {'uuid', ".*", {git, "https://github.com/travis/erlang-uuid.git", {branch, "master"}}},
+    {'mimetypes', ".*", {git, "https://github.com/spawngrid/mimetypes.git", {tag, "1.0"}}},
+    {'erlydtl', ".*", {git, "https://github.com/evanmiller/erlydtl.git", {branch, "master"}}}
 ]}.
