--- a/rebar.config
+++ b/rebar.config
@@ -3,12 +3,16 @@
         {"priv/inf_reference.so", ["c_src/inf_reference.c"]}
     ]}.
 {erlydtl_options, [
-        {compiler_options, [debug_info, debug_compiler]}
+        {compiler_options, [
+                {custom_filters_modules, [inf_dtl_filters]}
+            ]}
     ]}.
 {deps, [
     {'ranch', ".*", {git, "https://github.com/extend/ranch.git", {tag, "0.8.4"}}},
     {'cowboy', ".*", {git, "https://github.com/extend/cowboy.git", {tag, "0.8.6"}}},
     {'uuid', ".*", {git, "https://github.com/travis/erlang-uuid.git", {branch, "master"}}},
     {'mimetypes', ".*", {git, "https://github.com/spawngrid/mimetypes.git", {tag, "1.0"}}},
-    {'erlydtl', ".*", {git, "https://github.com/evanmiller/erlydtl.git", {branch, "master"}}}
+    {'erlydtl', ".*", {git, "https://github.com/evanmiller/erlydtl.git", {branch, "master"}}},
+    {'jiffy', ".*", {git, "https://github.com/davisp/jiffy.git", {tag, "0.8.4"}}},
+    {'erlv8', ".*", {git, "https://github.com/fauxsoup/erlv8.git", {branch, "master"}}}
 ]}.
